:sparkles: add ICP info

--- a/themes/love/layout/index.ejs
+++ b/themes/love/layout/index.ejs
@@ -21,6 +21,9 @@
           order="<%= theme.playlist.order %>" 
           loop="<%= theme.playlist.loop %>"></meting-js>
       </div>
+      <div class="copyright">
+        <a href="http://beian.miit.gov.cn/">鲁ICP备20030874号-2</a>
+      </div>
   </div>
 
 <!--计时器js-->
