--- a/themes/love/source/css/_partial/date.styl
+++ b/themes/love/source/css/_partial/date.styl
@@ -17,3 +17,19 @@ h2 {
         color: rgb(253, 99, 125);
         }
 
+.copyright {
+        font-size: 14px;
+        color: #666;
+        text-align: center;
+        position: fixed;
+        bottom: 48px;
+        left: 0;
+        width: 100vw;
+}
+
+.copyright a {
+        color: #666;
+        text-decoration: none;
+        border-bottom: 1px solid #666;
+        padding-bottom: 2px;
+}
